# esp32-wind-turbine-monitoring-firmware

./: CMakeLists.txt  README.md  partitions.csv
fs/: index.html
main/: CMakeLists.txt  config.h  main.c
main/adc/: adc.c  adc.h
main/blade-speed-sensor/: blade-speed-sensor.c  blade-speed-sensor.h
main/filesystem/: filesystem.c  filesystem.h
main/http-server/: http-server.c  http-server.h
main/i2c/: i2c.c  i2c.h
main/motor-speed-sensor/: motor-speed-sensor.c  motor-speed-sensor.h
main/wifi/: wifi.c  wifi.h
